--- a/camera.yaml
+++ b/camera.yaml
@@ -3,8 +3,9 @@
   mjpeg_url: http://192.168.86.41/media?action=stream&user=admin&pwd=
   still_image_url: http://192.168.86.41/snapshot.cgi?user=admin&pwd=
   verify_ssl: false
-- platform: ffmpeg
-  input: rtsp://192.168.86.56:554/
+- platform: generic
+  stream_source: rtsp://192.168.86.56:554/0/av1
+  still_image_url: http://192.168.86.56:554/snapshot
   name: camera2
 - platform: mjpeg
   name: livingcam
