Update yaml to use wifi_ssid and change auth details

--- a/esphome/bedroomesp.yaml
+++ b/esphome/bedroomesp.yaml
@@ -4,7 +4,7 @@ esphome:
   board: esp32doit-devkit-v1
 
 wifi:
-  ssid: virus
+  ssid: !secret wifi_ssid
   password: !secret wifi_password
 
 # Enable logging
