--- a/esphome/officeesp.yaml
+++ b/esphome/officeesp.yaml
@@ -4,9 +4,8 @@ esphome:
   board: d1_mini
 
 wifi:
-  ssid: "virus"
+  ssid: !secret wifi_ssid
   password: !secret wifi_password
-  fast_connect: true
 
 # Enable logging
 logger:
