--- a/camera.yaml
+++ b/camera.yaml
@@ -12,5 +12,8 @@
   still_image_url: http://192.168.86.61/image.jpg
   mjpeg_url: http://192.168.86.61/MJPEG.CGI
 - platform: onvif
-  host: 192.168.86.56
-  name: livingcam2
+  name: camera3
+  host: 192.168.86.74
+  username: admin
+  password: admin
+  port: 10080
