--- a/switches/command_line.yaml
+++ b/switches/command_line.yaml
@@ -1,14 +1,18 @@
 - platform: command_line
   switches:
     backroom_up:
+      value_template: "{{ False }}"
       command_on: '/config/ptz_script.sh 1'
       command_off: '/config/ptz_script.sh 1'
     backroom_down:
+      value_template: "{{ False }}"
       command_on: '/config/ptz_script.sh 2'
       command_off: '/config/ptz_script.sh 2'
     backroom_right:
+      value_template: "{{ False }}"
       command_on: '/config/ptz_script.sh 3'
       command_off: '/config/ptz_script.sh 3'
     backroom_left:
+      value_template: "{{ False }}"
       command_on: '/config/ptz_script.sh 4'
       command_off: '/config/ptz_script.sh 4'
