--- a/camera.yaml
+++ b/camera.yaml
@@ -17,3 +17,7 @@
   username: admin
   password: admin
   port: 10080
+- platform: mjpeg
+  name: livingcam2
+  still_image_url: http://admin:admin@192.168.86.74/snapshot.cgi
+  mjpeg_url: http://192.168.86.74/videostream.cgi?loginuse=admin&loginpas=admin
