--- a/switches/command_line.yaml
+++ b/switches/command_line.yaml
@@ -16,3 +16,11 @@
       value_template: "{{ False }}"
       command_on: '/config/ptz_script.sh 4'
       command_off: '/config/ptz_script.sh 4'
+    camera3_away:
+      value_template: "{{ False }}"
+      command_on: 'curl http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=31&onestep=0&sit=31&15574526250800.1525951885456529&_=1557452625080'
+      command_off: ''
+    camera3_home:
+      value_template: "{{ False }}"
+      command_on: 'curl http://192.168.86.74/decoder_control.cgi?loginuse=admin&loginpas=admin&command=33&onestep=0&sit=33&15574526526870.06020868982101746&_=1557452652687'
+      command_off: ''
