--- a/configuration.yaml
+++ b/configuration.yaml
@@ -109,3 +109,4 @@ scene: !include scene.yaml
 group: !include groups.yaml
 recorder: !include recorder.yaml
 media_player: !include media_player.yaml
+shell_command: !include shell_command.yaml
