--- a/automation/frontyard.yaml
+++ b/automation/frontyard.yaml
@@ -4,6 +4,9 @@
     - platform: state
       entity_id:  binary_sensor.hue_motion_sensor_1_motion
       to: 'on'
+    - platform: state
+      entity_id:  binary_sensor.entry_motion_motion
+      to: 'on'
   condition:
     condition: or
     conditions:
