--- a/light.yaml
+++ b/light.yaml
@@ -13,7 +13,7 @@
 - platform: group
   name: Office Light Group
   entities:
-    - light.office
+    - light.office_light1
 - platform: group
   name: Bedroom Light Group
   entities:
