--- a/sensors.yaml
+++ b/sensors.yaml
@@ -18,6 +18,14 @@
       value_template: '{{ states.switch.entertainment_unit.attributes["current_power_w"] }}'
       unit_of_measurement: 'W'
       friendly_name: "TV Power Usage"
+    sensibo_temperature:
+      value_template: '{{ states.climate.living_room.attributes["current_temperature"] }}'
+      unit_of_measurement: '°C'
+      friendly_name: "Sensibo Temperature"
+    sensibo_humidity:
+      value_template: '{{ states.climate.living_room.attributes["current_humidity"] }}'
+      unit_of_measurement: '%'
+      friendly_name: "Sensibo Humidity"
 - platform: filter
   name: "House Power"
   entity_id: sensor.energy_usage
