--- a/automation/livingroom.yaml
+++ b/automation/livingroom.yaml
@@ -1,5 +1,5 @@
 - id: day
-  alias: Day
+  alias: Time - Day
   trigger:
   - event: sunrise
     platform: sun
@@ -11,7 +11,7 @@
     entity_id: light.family_room_strip
     service: light.turn_on
 - id: night
-  alias: Night
+  alias: Time - Night
   trigger:
   - event: sunset
     platform: sun
