--- a/automation/livingroom.yaml
+++ b/automation/livingroom.yaml
@@ -23,55 +23,6 @@
     entity_id: light.family_room_strip
     service: light.turn_on
 
-- id: living_room_click_1
-  alias: Living Room Click 1
-  trigger:
-  - entity_id: sensor.living_room_switch
-    platform: state
-    to: 1_click_up
-  condition: []
-  action:
-  - service: input_select.select_option
-    data:
-      entity_id: input_select.livingroom_preset
-      option: "Normal"
-- id: living_room_click_2
-  alias: Living Room Click 2
-  trigger:
-  - entity_id: sensor.living_room_switch
-    platform: state
-    to: 2_click_up
-  condition: []
-  action:
-  - service: input_select.select_option
-    data:
-      entity_id: input_select.livingroom_preset
-      option: "Movie"
-- id: living_room_click_3
-  alias: Living Room Click 3
-  trigger:
-  - entity_id: sensor.living_room_switch
-    platform: state
-    to: 3_click_up
-  condition: []
-  action:
-  - service: input_select.select_option
-    data:
-      entity_id: input_select.livingroom_preset
-      option: "Night"
-- id: living_room_click_4
-  alias: Living Room Click 4
-  trigger:
-  - entity_id: sensor.living_room_switch
-    platform: state
-    to: 4_click_up
-  condition: []
-  action:
-  - service: input_select.select_option
-    data:
-      entity_id: input_select.livingroom_preset
-      option: "TurnOff"
-
 - alias: Living Room Normal selected
   id: living_room_normal_selected
   trigger:
@@ -108,3 +59,47 @@
   action:
     service: scene.turn_on
     entity_id: scene.turn_off
+- alias: Living room on
+  trigger:
+  - entity_id: sensor.hueswitch_1_action
+    platform: state
+    to: 'on-press'
+  condition: []
+  action:
+  - service: input_select.select_option
+    data:
+      entity_id: input_select.livingroom_preset
+      option: "Normal"
+- alias: Living room up
+  trigger:
+  - entity_id: sensor.hueswitch_1_action
+    platform: state
+    to: 'up-press'
+  condition: []
+  action:
+  - service: input_select.select_option
+    data:
+      entity_id: input_select.livingroom_preset
+      option: "Movie"
+- alias: Living room down
+  trigger:
+  - entity_id: sensor.hueswitch_1_action
+    platform: state
+    to: 'down-press'
+  condition: []
+  action:
+  - service: input_select.select_option
+    data:
+      entity_id: input_select.livingroom_preset
+      option: "Night"
+- alias: Living room off
+  trigger:
+  - entity_id: sensor.hueswitch_1_action
+    platform: state
+    to: 'off-press'
+  condition: []
+  action:
+  - service: input_select.select_option
+    data:
+      entity_id: input_select.livingroom_preset
+      option: "TurnOff"
