Add zigbee2mqtt map output to ignore (generated)

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ life360.conf
 www/google0f12d965ebc80330.html
 home-assistant_v2.db-wal
 home-assistant_v2.db-shm
+www/zigbee2mqtt_networkmap/source.js
