--- a/automation/bedroom.yaml
+++ b/automation/bedroom.yaml
@@ -32,3 +32,45 @@
       entity_id: group.bedroom_lights
       brightness_pct: 50
       transition: 300
+- alias: Main Bedroom light on
+  trigger:
+  - entity_id: sensor.main_bedroom_dimmer_action
+    platform: state
+    to: 'on-press'
+  condition: []
+  action:
+  - entity_id: group.bedroom_lights
+    service: light.turn_on
+    data:
+      brightness_pct: 100
+- alias: Main Bedroom light up press
+  trigger:
+  - entity_id: sensor.main_bedroom_dimmer_action
+    platform: state
+    to: 'up-press'
+  condition: []
+  action:
+  - entity_id: group.bedroom_lights
+    service: light.turn_on
+    data:
+       brightness_pct: 50
+- alias: Main Bedroom light down press
+  trigger:
+  - entity_id: sensor.main_bedroom_dimmer_action
+    platform: state
+    to: 'down-press'
+  condition: []
+  action:
+  - entity_id: group.bedroom_lights
+    service: light.turn_on
+    data:
+      brightness_pct: 10
+- alias: Main Bedroom light off
+  trigger:
+  - entity_id: sensor.main_bedroom_dimmer_action
+    platform: state
+    to: 'off-press'
+  condition: []
+  action:
+  - entity_id: group.bedroom_lights
+    service: light.turn_off
