--- a/groups.yaml
+++ b/groups.yaml
@@ -13,15 +13,15 @@ backroom_lights:
   name: Back room
   icon: mdi:castle
   entities:
-    - light.family_room_middle
-    - light.family_room_right
-    - light.family_room_left
+    - light.backroom_middle_light
+    - light.backroom_right_light
+    - light.craftarea_light
 livingroom_lights:
   name: Living Room
   icon: mdi:sofa
   entities:
-    - light.living_room_1
-    - light.living_room_2
+    - light.livingroom_main_a_light
+    - light.livingroom_main_b_light
     - light.livingroom_side
 office_lights:
   name: Office
@@ -32,8 +32,8 @@ bedroom_lights:
   name: Bedroom
   icon: mdi:bed-empty
   entities:
-    - light.bedroom_light_1
-    - light.bedroom_light_2
+    - light.main_bedroom_a_light
+    - light.main_bedroom_b_light
 craftroom_lights:
   name: Craft Room
   icon: mdi:content-cut
@@ -44,14 +44,14 @@ craftarea_lights:
   icon: mdi:content-cut
   entities:
     - light.craftroom_light
-    - light.family_room_left
+    - light.craftarea_light
 kitchen_lights:
   name: Kitchen
   icon: mdi:fridge
   entities:
-    - light.kitchen_light_back
-    - light.kitchen_light_front
-    - light.kitchen_counter
+    - light.kitchen_back_light
+    - light.kitchen_front_light
+    - light.kitchen_counter_light
 xander_bedroom_lights:
   name: Xander  Bedroom
   icon: mdi:bed-empty
