Don't use light groups anymore so remove this

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -117,7 +117,7 @@ group: !include groups.yaml
 recorder: !include recorder.yaml
 media_player: !include media_player.yaml
 shell_command: !include shell_command.yaml
-light: !include light.yaml
+#light: !include light.yaml
 panel_iframe: !include panel_iframe.yaml
 binary_sensor: !include binary_sensor.yaml
 input_boolean: !include input_boolean.yaml
